--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "heroku run build script"
+    "heroku-postbuild": "heroku run build script",
+    "seed": "cd server && npm run seed"
   },
   "keywords": [],
   "author": "",
