--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node config/seeds.js"
+    "seed": "node config/seeds.js",
+    "heroku-postbuild": "cd client && npm i && cd ../server && npm run seed && cd ../client && npm run build"
   },
   "keywords": [],
   "author": "",
