--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3000",
+  "secure":false,
   "dependencies": {
     "@apollo/client": "^3.4.10",
     "@testing-library/jest-dom": "^4.2.4",
