--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "heroku run build script",
+    "build": "cd client/ && npm i && npm run build",
+    "heroku-postbuild": "cd client && npm i && cd ../server && npm run seed && cd ../client && npm run build",
     "seed": "cd server && npm run seed"
   },
   "keywords": [],
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.9",
+    "global-agent": "^3.0.0",
     "graphql": "^15.5.1",
+    "http-proxy-middleware": "^2.0.1",
     "jwt-decode": "^3.1.2",
     "react-dotenv": "^0.1.3"
   }
