--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client/ && npm i && npm run build",
-    "heroku-postbuild": "cd client && npm i && cd ../server && npm run seed && cd ../client && npm run build",
+    "heroku-postbuild": "cd client && npm i && npm run build",
     "seed": "cd server && npm run seed"
   },
   "keywords": [],
